--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -21,6 +21,7 @@
   "report-time": "Berichtszeit",
   "hostname": "Hostname",
   "area": "Region",
+  "arch": "Architektur",
   "virtualization": "Virtualisierung",
   "use": "Belegung",
   "swap": "Swap-Speicher",
@@ -31,7 +32,10 @@
   "chart-disk": "Festplatte",
   "chart-network-up": "Upload",
   "chart-network-down": "Download",
+  "isp-name": "Firmenname",
+  "host-price": "Der Preis des Hosts",
   "due-time": "Ablaufzeit",
+  "buy-url": "Kauf Link",
   "open-source": "Quellcode verfügbar unter",
   "edit-host-title": "Host-Informationen bearbeiten",
   "due-time-placeholder": "Bitte Ablaufzeit auswählen",
