--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -21,6 +21,7 @@
   "report-time": "Report Time",
   "hostname": "Hostname",
   "area": "Area",
+  "arch": "Arch",
   "virtualization": "Virtualization",
   "use": "Usage",
   "swap": "Swap Memory",
@@ -31,7 +32,10 @@
   "chart-disk": "Disk",
   "chart-network-up": "Upload",
   "chart-network-down": "Download",
+  "isp-name": "ISP Name",
+  "host-price": "Host Price",
   "due-time": "Expiration Time",
+  "buy-url": "Buy URL",
   "open-source": "The code is open source on",
   "edit-host-title": "Edit Host Information",
   "due-time-placeholder": "Please select expiration time",
