--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -21,6 +21,7 @@
   "report-time": "報告時間",
   "hostname": "ホスト名",
   "area": "地域",
+  "arch": "アーキテクチャ",
   "virtualization": "仮想化",
   "use": "使用率",
   "swap": "スワップメモリ",
@@ -31,7 +32,10 @@
   "chart-disk": "ディスク",
   "chart-network-up": "アップロード",
   "chart-network-down": "ダウンロード",
+  "isp-name": "会社名",
+  "host-price": "ホスト価格",
   "due-time": "有効期限",
+  "buy-url": "購入リンク",
   "open-source": "ソースコードは以下で公開されています",
   "edit-host-title": "ホスト情報を編集",
   "due-time-placeholder": "有効期限を選択してください",
