--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -21,6 +21,7 @@
   "report-time": "보고 시간",
   "hostname": "호스트 이름",
   "area": "지역",
+  "arch": "아키텍처",
   "virtualization": "가상화",
   "use": "사용량",
   "swap": "스왑 메모리",
@@ -31,7 +32,10 @@
   "chart-disk": "디스크",
   "chart-network-up": "업로드",
   "chart-network-down": "다운로드",
+  "isp-name": "상호명",
+  "host-price": "호스트 가격",
   "due-time": "만료 시간",
+  "buy-url": "구매 링크",
   "open-source": "코드는 다음에서 오픈 소스입니다",
   "edit-host-title": "호스트 정보 편집",
   "due-time-placeholder": "만료 시간을 선택하세요",
