--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -21,6 +21,7 @@
   "report-time": "上报时间",
   "hostname": "主机名",
   "area": "地区",
+  "arch": "架构",
   "virtualization": "虚拟化",
   "use": "占用",
   "swap": "虚拟内存(Swap)",
@@ -31,7 +32,10 @@
   "chart-disk": "磁盘",
   "chart-network-up": "上传",
   "chart-network-down": "下载",
+  "isp-name": "商家名称",
+  "host-price": "主机价格",
   "due-time": "到期时间",
+  "buy-url": "购买链接",
   "open-source": "代码开源在",
   "edit-host-title": "编辑主机信息",
   "due-time-placeholder": "请选择到期时间",
